# Incubadora-Esp32

./: .cproject  .gitignore  .project
main/: CMakeLists.txt  config.h  ds18b20.c  ds18b20.h  ds18b20_probe.c  ds18b20_probe.h  main.c  triac_ctrl.c  triac_ctrl.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h  wifi_mgr.c  wifi_mgr.h
web/: README.md  index.html
